MDEV-7679: ANALYZE crashes when printing WHERE when no default db

Fix Item_ident::print() to work when there is no current database